--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>AlgoWoke</title>
   </head>
-  <body style="margin: 0px; padding: 0px;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-screen"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
